--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sfm-loader",
   "version": "0.0.2",
   "description": "single file miniprogram loader",
-  "main": "./src/v2mp-loader.js",
+  "main": "./src/loader.js",
   "scripts": {
     "release": "npm version patch && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,6 +16,7 @@
     "@babel/template": "^7.4.4",
     "@babel/traverse": "^7.5.5",
     "@babel/types": "^7.5.5",
+    "posthtml": "^0.11.6",
     "webpack-sources": "^1.4.3"
   }
 }
