--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "@babel/template": "^7.4.4",
     "@babel/traverse": "^7.5.5",
     "@babel/types": "^7.5.5",
+    "acorn": "^7.1.0",
+    "acorn-walk": "^7.0.0",
+    "hash-sum": "^2.0.0",
+    "install": "^0.13.0",
+    "loader-utils": "^1.2.3",
+    "npm": "^6.13.6",
     "posthtml": "^0.11.6",
+    "qs": "^6.9.1",
     "webpack-sources": "^1.4.3"
   }
 }
