--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "sfm-loader",
-  "version": "0.0.2",
-  "description": "single file miniprogram loader",
+  "name": "mp-enhanced",
+  "version": "0.0.1",
+  "description": "enhanced miniprogram",
   "main": "./src/loader.js",
   "scripts": {
     "release": "npm version patch && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bowen",
-  "license": "ISC",
-  "devDependencies": {},
+  "license": "MIT",
+  "gitHooks": {
+    "commit-msg": "node scripts/verify-commit-msg.js"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "chalk": "^2.3.2",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "yorkie": "^2.0.0"
+  },
   "dependencies": {
-    "@babel/generator": "^7.5.5",
-    "@babel/parser": "^7.5.5",
-    "@babel/template": "^7.4.4",
-    "@babel/traverse": "^7.5.5",
-    "@babel/types": "^7.5.5",
     "acorn": "^7.1.0",
     "acorn-walk": "^7.0.0",
     "hash-sum": "^2.0.0",
-    "install": "^0.13.0",
     "loader-utils": "^1.2.3",
-    "npm": "^6.13.6",
     "posthtml": "^0.11.6",
-    "qs": "^6.9.1",
-    "webpack-sources": "^1.4.3"
+    "qs": "^6.9.1"
   }
 }
