feat: 增加开发时文件夹dev

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "enhanced miniprogram",
   "main": "./src/loader.js",
   "scripts": {
-    "release": "npm version patch && npm publish",
+    "dev": "webpack --config ./dev/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bowen",
@@ -21,6 +21,8 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
     "yorkie": "^2.0.0"
   },
   "dependencies": {
