--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "acorn": "^7.1.0",
     "acorn-walk": "^7.0.0",
+    "escodegen": "^1.13.0",
     "hash-sum": "^2.0.0",
     "loader-utils": "^1.2.3",
     "postcss": "^7.0.26",
