--- a/lib/package.json
+++ b/lib/package.json
@@ -3,6 +3,20 @@
 	"version": "0.0.1",
 	"description": "enhanced miniprogram",
 	"main": "./core/index.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Bowen7/empjs.git"
+	},
+	"keywords": [
+		"framework",
+		"miniprogram",
+		"single file",
+		"wx"
+	],
+	"bugs": {
+		"url": "https://github.com/Bowen7/empjs/issues"
+	},
+	"homepage": "https://github.com/Bowen7/empjs#readme",
 	"author": "Bowen",
 	"license": "MIT",
 	"dependencies": {
