--- a/examples/base/package.json
+++ b/examples/base/package.json
@@ -12,8 +12,16 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^3.4.2",
+    "eslint-plugin-vue": "^6.1.2",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   },
   "dependencies": {
     "empjs": "^0.0.1"
