--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "empjs",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"description": "enhanced miniprogram",
 	"main": "./core/index.js",
 	"repository": {
@@ -20,12 +20,11 @@
 	"author": "Bowen",
 	"license": "MIT",
 	"dependencies": {
-		"acorn": "^7.1.0",
-		"acorn-walk": "^7.0.0",
-		"escodegen": "^1.13.0",
+		"@babel/generator": "^7.8.4",
+		"@babel/parser": "^7.8.4",
+		"@babel/traverse": "^7.8.4",
 		"hash-sum": "^2.0.0",
 		"loader-utils": "^1.2.3",
-		"postcss": "^7.0.26",
 		"posthtml": "^0.11.6",
 		"qs": "^6.9.1"
 	}
