--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "empjs",
-	"version": "0.0.6",
+	"version": "0.0.6-alpha.1",
 	"description": "enhanced miniprogram",
 	"main": "./core/index.js",
 	"repository": {
@@ -23,6 +23,7 @@
 		"@babel/generator": "^7.8.4",
 		"@babel/parser": "^7.8.4",
 		"@babel/traverse": "^7.8.4",
+		"enhanced-resolve": "^4.1.1",
 		"hash-sum": "^2.0.0",
 		"loader-utils": "^1.2.3",
 		"posthtml": "^0.11.6",
