--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "redux": "^4.0.5",
     "shelljs": "^0.8.3",
     "webpack": "^4.41.5",
