--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "empjs",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "enhanced miniprogram",
-  "main": "./core/index.js",
+  "main": "./runtime/index.js",
   "scripts": {
     "dev": "rm -rf dist && webpack --config ./dev/webpack.config.js --watch",
     "build": "node build/build.js",
